<resources>
    <string name="app_name">Android School</string>
    <string name="hello_eltex">Hello Eltex!</string>
    <string name="monogram" translatable="false">monogram</string>
    <string name="more_button" translatable="false">more_button</string>
    <string name="like_button" translatable="false">like_button</string>
    <string name="share_button" translatable="false">share_button</string>
    <string name="content_image" translatable="false">content_image</string>
    <string name="play" translatable="false">play</string>
    <string name="not_implemented">Not implemented</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="open_post">Open Post</string>
    <string name="open_event">Open Event</string>
    <string name="screen_examples">Screen examples</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="blank" />
    <string name="app_not_found">App not found</string>
    <string name="new_post_title">New post</string>
    <string name="save_post">Save post</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="new_post">new post</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_post_title">Edit post</string>
    <string name="no_media_selected">No media selected</string>
    <string name="new_event_title">New event</string>
    <string name="edit_event_title">Edit event</string>
    <string name="post_created">Post successfully created</string>
    <string name="event_created">Event successfully created</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="post_not_found">Post not found</string>
    <string name="post_edited">Post edited</string>
    <string name="event_edited">Event edited</string>
    <string name="event_not_found">Event not found</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="retry">Retry</string>
    <string name="content">Content</string>
    <string name="link">Link</string>
    <string name="participant">participant</string>
    <string name="remove">Remove</string>
    <string name="date_picker">date picker</string>
</resources>