<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/screen_examples"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/openPost"
        app:layout_constraintEnd_toEndOf="@id/openPost"
        app:layout_constraintStart_toStartOf="@id/openPost" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/openPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open_event"
        app:layout_constraintEnd_toEndOf="@id/openPost"
        app:layout_constraintStart_toStartOf="@id/openPost"
        app:layout_constraintTop_toBottomOf="@id/openPost" />

</androidx.constraintlayout.widget.ConstraintLayout>